# Tech-Trends-Harvester

./: .gitignore  API_SETUP.md  CHANGELOG.md  CI_ENHANCEMENTS_COMPLETE.md  CODE_OF_CONDUCT.md  CONFIG_SWITCHING.md  CONTRIBUTING.md  RATE_LIMITS.md  README.md  SECURITY.md  diagnose.py  pyproject.toml  run_app.py  start.sh  switch-config.sh
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  data_source.md  feature_request.md
.github/workflows/: ci.yml
assets/: create_icon.py
config/: sources-testing.yaml  sources.yaml
src/: aggregate.py  util.py
src/app/: controller.py  mainwindow.py  models.py  registry.py
src/collectors/: crates.py  devto.py  github_trending.py  google_trends.py  hackernews.py  hn_algolia.py  homebrew.py  lobsters.py  medium_rss.py  npm_downloads.py  pypi.py  reddit_posts.py  stackoverflow_tags.py
tests/: README.md  __init__.py  test_aggregate.py  test_util.py
