
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tech-trends-harvester"
version = "0.6.1"
description = "Desktop app that aggregates tech trends from 11+ sources to help you discover blog-worthy topics."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Rich Lewis", email = "1149213+RichLewis007@users.noreply.github.com"}]
keywords = ["trends", "blogging", "tech", "aggregator", "content", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Software Development",
    "Topic :: Text Processing",
]
dependencies = [
    "PySide6>=6.9,<7",
    "requests>=2.32,<3",
    "feedparser>=6.0.12,<7",
    "pandas>=2.3,<3",
    "PyYAML>=6.0.3,<7",
    "python-dateutil>=2.9,<3",
    "beautifulsoup4>=4.14,<5",
    "praw>=7.8,<8",
    "pytrends>=4.9,<5",
    "lxml>=6.0,<7",
    "tomli>=2.0,<3; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/RichLewis007/tech-trends-harvester"
Repository = "https://github.com/RichLewis007/tech-trends-harvester"
Issues = "https://github.com/RichLewis007/tech-trends-harvester/issues"
Changelog = "https://github.com/RichLewis007/tech-trends-harvester/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
]

[tool.uv]
index-url = "https://pypi.org/simple"

[tool.ruff]
line-length = 120
target-version = "py39"
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true



